@@ -4718,8 +4718,7 @@ button.mfp-arrow:active {
 	background: #ffffff;
 }
 .element-section > .element.popout.element-columns > .row {
-	margin-right: 0 !important;
-	margin-left: 0 !important;
+	margin: 0 !important;
 }
 
 /* Section BG shade */
